fix: 要加入讀取原始現形

--- a/04_SelectSegment.ipynb
+++ b/04_SelectSegment.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 17,
    "id": "f2f54fc2",
    "metadata": {},
    "outputs": [],
@@ -10,12 +10,13 @@
     "import os\n",
     "import geopandas as gpd\n",
     "import pandas as pd \n",
-    "from shapely.geometry import Point, LineString"
+    "from shapely.geometry import Point, LineString\n",
+    "from shapely import wkt # for WKT 轉幾何物件"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 2,
    "id": "a736ebd6",
    "metadata": {},
    "outputs": [],
@@ -129,25 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
-   "id": "e05ba16d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# 00_Setup 所有全域函數\n",
-    "# 1.) 參數\n",
-    "SL_buffer_meters = 500\n",
-    "SP_buffer_meters = 50\n",
-    "\n",
-    "# 2.) 資料input資料夾\n",
-    "referencefolder = os.path.abspath(os.path.join(os.getcwd(), '..', '參考資料'))\n",
-    "seqfolder = os.path.abspath(os.path.join(os.getcwd(), '..', '00_TDX資料下載'))\n",
-    "SLfolder = os.path.abspath(os.path.join(os.getcwd(), '..', '..', 'TRTS5屏柵線'))\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 20,
    "id": "024b8146",
    "metadata": {},
    "outputs": [],
@@ -193,7 +176,7 @@
     "    '''讀取公車站序並轉為geodataframe\n",
     "    seqfolder(str):站序點位資料csv所在資料夾'''\n",
     "    df_seq = read_combined_dataframe(file_list=findfiles(seqfolder))\n",
-    "    df_seq = df_seq.reindex(columns = ['RouteUID', 'SubRouteUID','Direction','StopUID', 'StopSequence', 'PositionLon', 'PositionLat'])\n",
+    "    df_seq = df_seq.reindex(columns = ['RouteUID', 'SubRouteUID', 'SubRouteName_Zh','Direction','StopUID', 'StopSequence', 'PositionLon', 'PositionLat']).rename(columns = {'SubRouteName_Zh':'SRouteName'})\n",
     "    df_seq = df_seq.drop_duplicates(subset= ['RouteUID', 'SubRouteUID','Direction', 'StopSequence', 'PositionLon', 'PositionLat'])\n",
     "    if (len(df_seq[df_seq['StopSequence'].isna()]) / len(df_seq) < 0.05):\n",
     "        df_seq = df_seq[df_seq['StopSequence'].notna()] # 會有沒有站序的\n",
@@ -251,12 +234,41 @@
     "    gdf = gdf.copy()\n",
     "    gdf['geometry'] = gdf.geometry.buffer(buffermeters)\n",
     "    return gdf \n",
+    "\n",
+    "def get_gdf_route(routefolder):\n",
+    "    df_route = read_combined_dataframe(findfiles(routefolder))\n",
+    "    df_route[\"geometry\"] = df_route[\"Geometry\"].apply(wkt.loads)\n",
+    "    gdf_route = gpd.GeoDataFrame(\n",
+    "        df_route,\n",
+    "        geometry=\"geometry\",\n",
+    "        crs=\"EPSG:4326\"\n",
+    "    ) \n",
+    "    return gdf_route\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 12,
+   "id": "e05ba16d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 00_Setup 所有全域函數\n",
+    "# 1.) 參數\n",
+    "SL_buffer_meters = 500\n",
+    "SP_buffer_meters = 50\n",
+    "\n",
+    "# 2.) 資料input資料夾\n",
+    "referencefolder = os.path.abspath(os.path.join(os.getcwd(), '..', '參考資料'))\n",
+    "seqfolder = os.path.abspath(os.path.join(os.getcwd(), '..', '00_TDX資料下載', '01公車站序資料'))\n",
+    "routefolder = os.path.abspath(os.path.join(os.getcwd(), '..', '00_TDX資料下載', '02公車路線資料'))\n",
+    "SLfolder = os.path.abspath(os.path.join(os.getcwd(), '..', '..', 'TRTS5屏柵線'))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "761a1d72",
    "metadata": {},
    "outputs": [],
@@ -267,10 +279,11 @@
     "# 轉為TWD97 (EPSG:3826) 才能使用buffer功能\n",
     "gdf_sp_unique = get_gdf_sp_unique(gdf_sp).to_crs(epsg=3826) # 因為提供的點位有分路段，所以先改為同一個地點\n",
     "gdf_sl_twd97 = gdf_sl.to_crs(epsg=3826).reindex(columns = ['TRTS5', 'Category', 'Number', 'geometry']) # 轉換為TWD97處理\n",
-    "# 取得公車站序\n",
+    "# 讀取公車站序\n",
     "df_seq = get_df_seq(seqfolder=seqfolder)\n",
     "gdf_seq = dataframe_to_point(df = df_seq, lon_col='PositionLon', lat_col= 'PositionLat', crs=\"EPSG:4326\", target_crs=\"EPSG:3826\")\n",
-    "\n",
+    "# 讀取公車原始線型\n",
+    "gdf_route  = get_gdf_route(routefolder)\n",
     "\n",
     "# 2. Buffer初步確認那些會經過調查點位\n",
     "gdf_routepair = get_gdfroutepair(df_seq) # 取得公車路線pair直線\n",
@@ -288,378 +301,6 @@
     "#                             how='inner',\n",
     "#                             predicate='intersects'\n",
     "#                             ).drop(columns='index_right')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 41,
-   "id": "239e9665",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>RouteUID</th>\n",
-       "      <th>SubRouteUID</th>\n",
-       "      <th>Direction</th>\n",
-       "      <th>FromStop</th>\n",
-       "      <th>FromSeq</th>\n",
-       "      <th>FromLon</th>\n",
-       "      <th>FromLat</th>\n",
-       "      <th>ToStop</th>\n",
-       "      <th>ToSeq</th>\n",
-       "      <th>ToLon</th>\n",
-       "      <th>ToLat</th>\n",
-       "      <th>geometry</th>\n",
-       "      <th>Category</th>\n",
-       "      <th>TRTS5</th>\n",
-       "      <th>SP_No</th>\n",
-       "      <th>Name</th>\n",
-       "      <th>PositionLon</th>\n",
-       "      <th>PositionLat</th>\n",
-       "      <th>Surveyname</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>2815</th>\n",
-       "      <td>KEE0376</td>\n",
-       "      <td>KEE037601</td>\n",
-       "      <td>0</td>\n",
-       "      <td>KEE307216</td>\n",
-       "      <td>14.0</td>\n",
-       "      <td>121.683353</td>\n",
-       "      <td>25.084488</td>\n",
-       "      <td>KEE307214</td>\n",
-       "      <td>15.0</td>\n",
-       "      <td>121.676491</td>\n",
-       "      <td>25.086690</td>\n",
-       "      <td>LINESTRING (318931.459 2775309.939, 318238.031...</td>\n",
-       "      <td>1</td>\n",
-       "      <td>SL10</td>\n",
-       "      <td>3</td>\n",
-       "      <td>SL10-3</td>\n",
-       "      <td>121.679392</td>\n",
-       "      <td>25.085828</td>\n",
-       "      <td>01F0099S</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2852</th>\n",
-       "      <td>KEE0376</td>\n",
-       "      <td>KEE037601</td>\n",
-       "      <td>0</td>\n",
-       "      <td>KEE307215</td>\n",
-       "      <td>51.0</td>\n",
-       "      <td>121.676478</td>\n",
-       "      <td>25.086496</td>\n",
-       "      <td>KEE307217</td>\n",
-       "      <td>52.0</td>\n",
-       "      <td>121.683198</td>\n",
-       "      <td>25.084455</td>\n",
-       "      <td>LINESTRING (318236.827 2775528.872, 318915.842...</td>\n",
-       "      <td>1</td>\n",
-       "      <td>SL10</td>\n",
-       "      <td>3</td>\n",
-       "      <td>SL10-3</td>\n",
-       "      <td>121.679392</td>\n",
-       "      <td>25.085828</td>\n",
-       "      <td>01F0099S</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2880</th>\n",
-       "      <td>KEE0376</td>\n",
-       "      <td>KEE0376A1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>KEE307216</td>\n",
-       "      <td>16.0</td>\n",
-       "      <td>121.683353</td>\n",
-       "      <td>25.084488</td>\n",
-       "      <td>KEE307214</td>\n",
-       "      <td>17.0</td>\n",
-       "      <td>121.676491</td>\n",
-       "      <td>25.086690</td>\n",
-       "      <td>LINESTRING (318931.459 2775309.939, 318238.031...</td>\n",
-       "      <td>1</td>\n",
-       "      <td>SL10</td>\n",
-       "      <td>3</td>\n",
-       "      <td>SL10-3</td>\n",
-       "      <td>121.679392</td>\n",
-       "      <td>25.085828</td>\n",
-       "      <td>01F0099S</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2917</th>\n",
-       "      <td>KEE0376</td>\n",
-       "      <td>KEE0376A1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>KEE307215</td>\n",
-       "      <td>53.0</td>\n",
-       "      <td>121.676478</td>\n",
-       "      <td>25.086496</td>\n",
-       "      <td>KEE307217</td>\n",
-       "      <td>54.0</td>\n",
-       "      <td>121.683198</td>\n",
-       "      <td>25.084455</td>\n",
-       "      <td>LINESTRING (318236.827 2775528.872, 318915.842...</td>\n",
-       "      <td>1</td>\n",
-       "      <td>SL10</td>\n",
-       "      <td>3</td>\n",
-       "      <td>SL10-3</td>\n",
-       "      <td>121.679392</td>\n",
-       "      <td>25.085828</td>\n",
-       "      <td>01F0099S</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2943</th>\n",
-       "      <td>KEE0376</td>\n",
-       "      <td>KEE0376D1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>KEE307216</td>\n",
-       "      <td>14.0</td>\n",
-       "      <td>121.683353</td>\n",
-       "      <td>25.084488</td>\n",
-       "      <td>KEE307214</td>\n",
-       "      <td>15.0</td>\n",
-       "      <td>121.676491</td>\n",
-       "      <td>25.086690</td>\n",
-       "      <td>LINESTRING (318931.459 2775309.939, 318238.031...</td>\n",
-       "      <td>1</td>\n",
-       "      <td>SL10</td>\n",
-       "      <td>3</td>\n",
-       "      <td>SL10-3</td>\n",
-       "      <td>121.679392</td>\n",
-       "      <td>25.085828</td>\n",
-       "      <td>01F0099S</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>171914</th>\n",
-       "      <td>TPE810</td>\n",
-       "      <td>TPE810</td>\n",
-       "      <td>0</td>\n",
-       "      <td>TPE18159</td>\n",
-       "      <td>30.0</td>\n",
-       "      <td>121.527797</td>\n",
-       "      <td>25.096957</td>\n",
-       "      <td>TPE18161</td>\n",
-       "      <td>31.0</td>\n",
-       "      <td>121.525684</td>\n",
-       "      <td>25.103907</td>\n",
-       "      <td>LINESTRING (303234.428 2776620.767, 303018.295...</td>\n",
-       "      <td>1</td>\n",
-       "      <td>SL5</td>\n",
-       "      <td>5</td>\n",
-       "      <td>SL5-5</td>\n",
-       "      <td>121.526689</td>\n",
-       "      <td>25.100189</td>\n",
-       "      <td>231-中山北路6段-福國路口</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>171936</th>\n",
-       "      <td>TPE810</td>\n",
-       "      <td>TPE810</td>\n",
-       "      <td>1</td>\n",
-       "      <td>TPE188195</td>\n",
-       "      <td>12.0</td>\n",
-       "      <td>121.524957</td>\n",
-       "      <td>25.103354</td>\n",
-       "      <td>TPE18199</td>\n",
-       "      <td>13.0</td>\n",
-       "      <td>121.527404</td>\n",
-       "      <td>25.097202</td>\n",
-       "      <td>LINESTRING (302945.222 2777328.223, 303194.652...</td>\n",
-       "      <td>1</td>\n",
-       "      <td>SL5</td>\n",
-       "      <td>5</td>\n",
-       "      <td>SL5-5</td>\n",
-       "      <td>121.526689</td>\n",
-       "      <td>25.100189</td>\n",
-       "      <td>231-中山北路6段-福國路口</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>171942</th>\n",
-       "      <td>TPE810</td>\n",
-       "      <td>TPE810</td>\n",
-       "      <td>1</td>\n",
-       "      <td>TPE18209</td>\n",
-       "      <td>18.0</td>\n",
-       "      <td>121.524712</td>\n",
-       "      <td>25.081760</td>\n",
-       "      <td>TPE18211</td>\n",
-       "      <td>19.0</td>\n",
-       "      <td>121.527560</td>\n",
-       "      <td>25.067310</td>\n",
-       "      <td>LINESTRING (302929.824 2774936.188, 303223.341...</td>\n",
-       "      <td>1</td>\n",
-       "      <td>SL6</td>\n",
-       "      <td>6</td>\n",
-       "      <td>SL6-6</td>\n",
-       "      <td>121.526445</td>\n",
-       "      <td>25.072980</td>\n",
-       "      <td>223-新生高圓山橋</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>171947</th>\n",
-       "      <td>TPE810</td>\n",
-       "      <td>TPE810</td>\n",
-       "      <td>1</td>\n",
-       "      <td>TPE18219</td>\n",
-       "      <td>23.0</td>\n",
-       "      <td>121.532859</td>\n",
-       "      <td>25.062477</td>\n",
-       "      <td>TPE18221</td>\n",
-       "      <td>24.0</td>\n",
-       "      <td>121.536498</td>\n",
-       "      <td>25.062369</td>\n",
-       "      <td>LINESTRING (303760.045 2772803.568, 304127.288...</td>\n",
-       "      <td>1</td>\n",
-       "      <td>SL2</td>\n",
-       "      <td>2</td>\n",
-       "      <td>SL2-2</td>\n",
-       "      <td>121.535669</td>\n",
-       "      <td>25.062427</td>\n",
-       "      <td>民權東路~建國北路</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>171956</th>\n",
-       "      <td>TPE810</td>\n",
-       "      <td>TPE810</td>\n",
-       "      <td>1</td>\n",
-       "      <td>TPE18237</td>\n",
-       "      <td>32.0</td>\n",
-       "      <td>121.548740</td>\n",
-       "      <td>25.048640</td>\n",
-       "      <td>TPE18239</td>\n",
-       "      <td>33.0</td>\n",
-       "      <td>121.548797</td>\n",
-       "      <td>25.045271</td>\n",
-       "      <td>LINESTRING (305368.534 2771277.295, 305375.799...</td>\n",
-       "      <td>1</td>\n",
-       "      <td>SL1</td>\n",
-       "      <td>14</td>\n",
-       "      <td>SL1-14</td>\n",
-       "      <td>121.548910</td>\n",
-       "      <td>25.046090</td>\n",
-       "      <td>敦化南路(市民大道北側)</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>3003 rows × 19 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "       RouteUID SubRouteUID  Direction   FromStop  FromSeq     FromLon  \\\n",
-       "2815    KEE0376   KEE037601          0  KEE307216     14.0  121.683353   \n",
-       "2852    KEE0376   KEE037601          0  KEE307215     51.0  121.676478   \n",
-       "2880    KEE0376   KEE0376A1          0  KEE307216     16.0  121.683353   \n",
-       "2917    KEE0376   KEE0376A1          0  KEE307215     53.0  121.676478   \n",
-       "2943    KEE0376   KEE0376D1          0  KEE307216     14.0  121.683353   \n",
-       "...         ...         ...        ...        ...      ...         ...   \n",
-       "171914   TPE810      TPE810          0   TPE18159     30.0  121.527797   \n",
-       "171936   TPE810      TPE810          1  TPE188195     12.0  121.524957   \n",
-       "171942   TPE810      TPE810          1   TPE18209     18.0  121.524712   \n",
-       "171947   TPE810      TPE810          1   TPE18219     23.0  121.532859   \n",
-       "171956   TPE810      TPE810          1   TPE18237     32.0  121.548740   \n",
-       "\n",
-       "          FromLat     ToStop  ToSeq       ToLon      ToLat  \\\n",
-       "2815    25.084488  KEE307214   15.0  121.676491  25.086690   \n",
-       "2852    25.086496  KEE307217   52.0  121.683198  25.084455   \n",
-       "2880    25.084488  KEE307214   17.0  121.676491  25.086690   \n",
-       "2917    25.086496  KEE307217   54.0  121.683198  25.084455   \n",
-       "2943    25.084488  KEE307214   15.0  121.676491  25.086690   \n",
-       "...           ...        ...    ...         ...        ...   \n",
-       "171914  25.096957   TPE18161   31.0  121.525684  25.103907   \n",
-       "171936  25.103354   TPE18199   13.0  121.527404  25.097202   \n",
-       "171942  25.081760   TPE18211   19.0  121.527560  25.067310   \n",
-       "171947  25.062477   TPE18221   24.0  121.536498  25.062369   \n",
-       "171956  25.048640   TPE18239   33.0  121.548797  25.045271   \n",
-       "\n",
-       "                                                 geometry  Category TRTS5  \\\n",
-       "2815    LINESTRING (318931.459 2775309.939, 318238.031...         1  SL10   \n",
-       "2852    LINESTRING (318236.827 2775528.872, 318915.842...         1  SL10   \n",
-       "2880    LINESTRING (318931.459 2775309.939, 318238.031...         1  SL10   \n",
-       "2917    LINESTRING (318236.827 2775528.872, 318915.842...         1  SL10   \n",
-       "2943    LINESTRING (318931.459 2775309.939, 318238.031...         1  SL10   \n",
-       "...                                                   ...       ...   ...   \n",
-       "171914  LINESTRING (303234.428 2776620.767, 303018.295...         1   SL5   \n",
-       "171936  LINESTRING (302945.222 2777328.223, 303194.652...         1   SL5   \n",
-       "171942  LINESTRING (302929.824 2774936.188, 303223.341...         1   SL6   \n",
-       "171947  LINESTRING (303760.045 2772803.568, 304127.288...         1   SL2   \n",
-       "171956  LINESTRING (305368.534 2771277.295, 305375.799...         1   SL1   \n",
-       "\n",
-       "        SP_No    Name  PositionLon  PositionLat       Surveyname  \n",
-       "2815        3  SL10-3   121.679392    25.085828         01F0099S  \n",
-       "2852        3  SL10-3   121.679392    25.085828         01F0099S  \n",
-       "2880        3  SL10-3   121.679392    25.085828         01F0099S  \n",
-       "2917        3  SL10-3   121.679392    25.085828         01F0099S  \n",
-       "2943        3  SL10-3   121.679392    25.085828         01F0099S  \n",
-       "...       ...     ...          ...          ...              ...  \n",
-       "171914      5   SL5-5   121.526689    25.100189  231-中山北路6段-福國路口  \n",
-       "171936      5   SL5-5   121.526689    25.100189  231-中山北路6段-福國路口  \n",
-       "171942      6   SL6-6   121.526445    25.072980       223-新生高圓山橋  \n",
-       "171947      2   SL2-2   121.535669    25.062427        民權東路~建國北路  \n",
-       "171956     14  SL1-14   121.548910    25.046090     敦化南路(市民大道北側)  \n",
-       "\n",
-       "[3003 rows x 19 columns]"
-      ]
-     },
-     "execution_count": 41,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "route_in_buffer"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a467780b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "gdf_sp_buffer = gdf_sp_unique.copy()\n",
-    "gdf_sp_buffer['geometry'] = gdf_sp_buffer.geometry.buffer(SL_buffer_meters)"
    ]
   }
  ],
