feat:新增下載路線基本資料(營運資料)

--- a/01_TDX資料下載.ipynb
+++ b/01_TDX資料下載.ipynb
@@ -143,7 +143,37 @@
     "        output_folder = output_folder,\n",
     "        output_file_name = output_file_name\n",
     "        )\n",
+    "    \n",
     "\n",
+    "    '''下載市區公車營運資料'''\n",
+    "    businfo_folder = create_folder(os.path.join(os.getcwd(), '..', \"00_TDX資料下載\", \"03公車路線營運資料\"))\n",
+    "    for city, city_en in selectcity.items():\n",
+    "        url = f\"https://tdx.transportdata.tw/api/basic/v2/Bus/Route/City/{city_en}?%24format=XML\"\n",
+    "        output_folder = businfo_folder\n",
+    "        output_file_name = f\"市區公車路線營運資料_{city}_{downloaddate}.xml\"\n",
+    "        tdx_data_download(\n",
+    "            app_id = app_id,\n",
+    "            app_key = app_key,\n",
+    "            url = url,\n",
+    "            output_folder = output_folder,\n",
+    "            output_file_name = output_file_name\n",
+    "            )\n",
+    "        \n",
+    "        time.sleep(60)\n",
+    "\n",
+    "    '''下載公路客運公車營運資料'''\n",
+    "    url = \"https://tdx.transportdata.tw/api/basic/v2/Bus/Route/InterCity?%24format=XML\"\n",
+    "    output_folder = businfo_folder\n",
+    "    output_file_name = f\"公路客運站序資料_{downloaddate}.xml\"\n",
+    "    tdx_data_download(\n",
+    "        app_id = app_id,\n",
+    "        app_key = app_key,\n",
+    "        url = url,\n",
+    "        output_folder = output_folder,\n",
+    "        output_file_name = output_file_name\n",
+    "        )\n",
+    "\n",
+    "    time.sleep(60)\n",
     "if __name__ == \"__main__\":\n",
     "    main()"
    ]
