fix:讀取外部TDX資料修正

--- a/02_公車路線shp拆分.ipynb
+++ b/02_公車路線shp拆分.ipynb
@@ -14,6 +14,7 @@
     "from shapely import wkt # for WKT 轉幾何物件\n",
     "from shapely.geometry import LineString, Point, MultiLineString\n",
     "from shapely.ops import substring, linemerge\n",
+    "from TDXdataframe import read_bus_stop_of_route_xml, read_bus_shape_of_route_xml\n",
     "\n",
     "# 00 Setup\n",
     "def create_folder(folder_name):\n",
@@ -98,120 +99,120 @@
     "    return gdf\n",
     "\n",
     "# 01 讀取TDX資料\n",
-    "def read_bus_stop_of_route_xml(xml_path: str) -> pd.DataFrame:\n",
-    "    \"\"\"\n",
-    "    讀取 TDX 公車站序 XML（BusStopOfRoute），回傳整理好的 pandas DataFrame。\n",
+    "# def read_bus_stop_of_route_xml(xml_path: str) -> pd.DataFrame:\n",
+    "#     \"\"\"\n",
+    "#     讀取 TDX 公車站序 XML（BusStopOfRoute），回傳整理好的 pandas DataFrame。\n",
     "    \n",
-    "    每一列 = 一個站牌（Stop），同時附上路線 / 營運業者資訊。\n",
-    "    \"\"\"\n",
-    "    tree = ET.parse(xml_path)\n",
-    "    root = tree.getroot()\n",
+    "#     每一列 = 一個站牌（Stop），同時附上路線 / 營運業者資訊。\n",
+    "#     \"\"\"\n",
+    "#     tree = ET.parse(xml_path)\n",
+    "#     root = tree.getroot()\n",
     "\n",
-    "    # 自動從 root 解析出 namespace（避免寫死）\n",
-    "    if root.tag.startswith(\"{\"):\n",
-    "        uri = root.tag.split(\"}\")[0].strip(\"{\")\n",
-    "    else:\n",
-    "        uri = \"https://ptx.transportdata.tw/standard/schema/\"\n",
-    "    ns = {\"ns\": uri}\n",
+    "#     # 自動從 root 解析出 namespace（避免寫死）\n",
+    "#     if root.tag.startswith(\"{\"):\n",
+    "#         uri = root.tag.split(\"}\")[0].strip(\"{\")\n",
+    "#     else:\n",
+    "#         uri = \"https://ptx.transportdata.tw/standard/schema/\"\n",
+    "#     ns = {\"ns\": uri}\n",
     "\n",
-    "    def gettext(elem, path):\n",
-    "        \"\"\"安全取 text，找不到就回 None\"\"\"\n",
-    "        if elem is None:\n",
-    "            return None\n",
-    "        child = elem.find(path, ns)\n",
-    "        return child.text if child is not None else None\n",
+    "#     def gettext(elem, path):\n",
+    "#         \"\"\"安全取 text，找不到就回 None\"\"\"\n",
+    "#         if elem is None:\n",
+    "#             return None\n",
+    "#         child = elem.find(path, ns)\n",
+    "#         return child.text if child is not None else None\n",
     "\n",
-    "    rows = []\n",
+    "#     rows = []\n",
     "\n",
-    "    # 每一個 <BusStopOfRoute> 代表一條路線 + 方向\n",
-    "    for bsr in root.findall(\"ns:BusStopOfRoute\", ns):\n",
+    "#     # 每一個 <BusStopOfRoute> 代表一條路線 + 方向\n",
+    "#     for bsr in root.findall(\"ns:BusStopOfRoute\", ns):\n",
     "\n",
-    "        # 路線共同欄位\n",
-    "        base = {\n",
-    "            \"RouteUID\":          gettext(bsr, \"ns:RouteUID\"),\n",
-    "            \"RouteID\":           gettext(bsr, \"ns:RouteID\"),\n",
-    "            \"RouteName_Zh\":      gettext(bsr, \"ns:RouteName/ns:Zh_tw\"),\n",
-    "            \"RouteName_En\":      gettext(bsr, \"ns:RouteName/ns:En\"),\n",
-    "            \"SubRouteUID\":       gettext(bsr, \"ns:SubRouteUID\"),\n",
-    "            \"SubRouteID\":        gettext(bsr, \"ns:SubRouteID\"),\n",
-    "            \"SubRouteName_Zh\":   gettext(bsr, \"ns:SubRouteName/ns:Zh_tw\"),\n",
-    "            \"SubRouteName_En\":   gettext(bsr, \"ns:SubRouteName/ns:En\"),\n",
-    "            \"Direction\":         gettext(bsr, \"ns:Direction\"),\n",
-    "            \"City\":              gettext(bsr, \"ns:City\"),\n",
-    "            \"CityCode\":          gettext(bsr, \"ns:CityCode\"),\n",
-    "            \"OperatorID\":        gettext(bsr, \"ns:Operators/ns:Operator/ns:OperatorID\"),\n",
-    "            \"OperatorName_Zh\":   gettext(bsr, \"ns:Operators/ns:Operator/ns:OperatorName/ns:Zh_tw\"),\n",
-    "            \"OperatorNo\":        gettext(bsr, \"ns:Operators/ns:Operator/ns:OperatorNo\"),\n",
-    "        }\n",
+    "#         # 路線共同欄位\n",
+    "#         base = {\n",
+    "#             \"RouteUID\":          gettext(bsr, \"ns:RouteUID\"),\n",
+    "#             \"RouteID\":           gettext(bsr, \"ns:RouteID\"),\n",
+    "#             \"RouteName_Zh\":      gettext(bsr, \"ns:RouteName/ns:Zh_tw\"),\n",
+    "#             \"RouteName_En\":      gettext(bsr, \"ns:RouteName/ns:En\"),\n",
+    "#             \"SubRouteUID\":       gettext(bsr, \"ns:SubRouteUID\"),\n",
+    "#             \"SubRouteID\":        gettext(bsr, \"ns:SubRouteID\"),\n",
+    "#             \"SubRouteName_Zh\":   gettext(bsr, \"ns:SubRouteName/ns:Zh_tw\"),\n",
+    "#             \"SubRouteName_En\":   gettext(bsr, \"ns:SubRouteName/ns:En\"),\n",
+    "#             \"Direction\":         gettext(bsr, \"ns:Direction\"),\n",
+    "#             \"City\":              gettext(bsr, \"ns:City\"),\n",
+    "#             \"CityCode\":          gettext(bsr, \"ns:CityCode\"),\n",
+    "#             \"OperatorID\":        gettext(bsr, \"ns:Operators/ns:Operator/ns:OperatorID\"),\n",
+    "#             \"OperatorName_Zh\":   gettext(bsr, \"ns:Operators/ns:Operator/ns:OperatorName/ns:Zh_tw\"),\n",
+    "#             \"OperatorNo\":        gettext(bsr, \"ns:Operators/ns:Operator/ns:OperatorNo\"),\n",
+    "#         }\n",
     "\n",
-    "        # 底下所有 <Stop>\n",
-    "        for stop in bsr.findall(\"ns:Stops/ns:Stop\", ns):\n",
-    "            row = base.copy()\n",
-    "            row.update({\n",
-    "                \"StopUID\":          gettext(stop, \"ns:StopUID\"),\n",
-    "                \"StopID\":           gettext(stop, \"ns:StopID\"),\n",
-    "                \"StopName_Zh\":      gettext(stop, \"ns:StopName/ns:Zh_tw\"),\n",
-    "                \"StopName_En\":      gettext(stop, \"ns:StopName/ns:En\"),\n",
-    "                \"StopBoarding\":     gettext(stop, \"ns:StopBoarding\"),\n",
-    "                \"StopSequence\":     gettext(stop, \"ns:StopSequence\"),\n",
-    "                \"PositionLon\":      gettext(stop, \"ns:StopPosition/ns:PositionLon\"),\n",
-    "                \"PositionLat\":      gettext(stop, \"ns:StopPosition/ns:PositionLat\"),\n",
-    "                \"GeoHash\":          gettext(stop, \"ns:StopPosition/ns:GeoHash\"),\n",
-    "                \"StationID\":        gettext(stop, \"ns:StationID\"),\n",
-    "                \"StationGroupID\":   gettext(stop, \"ns:StationGroupID\"),\n",
-    "                \"LocationCityCode\": gettext(stop, \"ns:LocationCityCode\"),\n",
-    "            })\n",
-    "            rows.append(row)\n",
+    "#         # 底下所有 <Stop>\n",
+    "#         for stop in bsr.findall(\"ns:Stops/ns:Stop\", ns):\n",
+    "#             row = base.copy()\n",
+    "#             row.update({\n",
+    "#                 \"StopUID\":          gettext(stop, \"ns:StopUID\"),\n",
+    "#                 \"StopID\":           gettext(stop, \"ns:StopID\"),\n",
+    "#                 \"StopName_Zh\":      gettext(stop, \"ns:StopName/ns:Zh_tw\"),\n",
+    "#                 \"StopName_En\":      gettext(stop, \"ns:StopName/ns:En\"),\n",
+    "#                 \"StopBoarding\":     gettext(stop, \"ns:StopBoarding\"),\n",
+    "#                 \"StopSequence\":     gettext(stop, \"ns:StopSequence\"),\n",
+    "#                 \"PositionLon\":      gettext(stop, \"ns:StopPosition/ns:PositionLon\"),\n",
+    "#                 \"PositionLat\":      gettext(stop, \"ns:StopPosition/ns:PositionLat\"),\n",
+    "#                 \"GeoHash\":          gettext(stop, \"ns:StopPosition/ns:GeoHash\"),\n",
+    "#                 \"StationID\":        gettext(stop, \"ns:StationID\"),\n",
+    "#                 \"StationGroupID\":   gettext(stop, \"ns:StationGroupID\"),\n",
+    "#                 \"LocationCityCode\": gettext(stop, \"ns:LocationCityCode\"),\n",
+    "#             })\n",
+    "#             rows.append(row)\n",
     "\n",
-    "    df = pd.DataFrame(rows)\n",
+    "#     df = pd.DataFrame(rows)\n",
     "\n",
-    "    # 可選：把數值欄位轉型（如果你需要的話）\n",
-    "    for col in [\"StopSequence\"]:\n",
-    "        if col in df.columns:\n",
-    "            df[col] = pd.to_numeric(df[col], errors=\"ignore\")\n",
-    "    for col in [\"PositionLon\", \"PositionLat\"]:\n",
-    "        if col in df.columns:\n",
-    "            df[col] = pd.to_numeric(df[col], errors=\"ignore\")\n",
+    "#     # 可選：把數值欄位轉型（如果你需要的話）\n",
+    "#     for col in [\"StopSequence\"]:\n",
+    "#         if col in df.columns:\n",
+    "#             df[col] = pd.to_numeric(df[col], errors=\"ignore\")\n",
+    "#     for col in [\"PositionLon\", \"PositionLat\"]:\n",
+    "#         if col in df.columns:\n",
+    "#             df[col] = pd.to_numeric(df[col], errors=\"ignore\")\n",
     "\n",
-    "    return df\n",
+    "#     return df\n",
     "\n",
-    "def read_bus_shape_of_route_xml(xml_path: str) -> pd.DataFrame:\n",
-    "    \"\"\"\n",
-    "    讀取 TDX 公車路線 XML（BusShape），回傳整理好的 pandas DataFrame。\n",
-    "    \"\"\"\n",
+    "# def read_bus_shape_of_route_xml(xml_path: str) -> pd.DataFrame:\n",
+    "#     \"\"\"\n",
+    "#     讀取 TDX 公車路線 XML（BusShape），回傳整理好的 pandas DataFrame。\n",
+    "#     \"\"\"\n",
     "\n",
-    "    # 解析 XML\n",
-    "    tree = ET.parse(xml_path)\n",
-    "    root = tree.getroot()\n",
+    "#     # 解析 XML\n",
+    "#     tree = ET.parse(xml_path)\n",
+    "#     root = tree.getroot()\n",
     "\n",
-    "    # 宣告 XML namespace（必須！）\n",
-    "    ns = {'ns': \"https://ptx.transportdata.tw/standard/schema/\"}\n",
+    "#     # 宣告 XML namespace（必須！）\n",
+    "#     ns = {'ns': \"https://ptx.transportdata.tw/standard/schema/\"}\n",
     "\n",
-    "    records = []\n",
+    "#     records = []\n",
     "\n",
-    "    # 每一個 <BusShape> 就是一筆資料\n",
-    "    for bus in root.findall('ns:BusShape', ns):\n",
-    "        record = {\n",
-    "            \"Geometry\": bus.findtext('ns:Geometry', namespaces=ns),\n",
-    "            \"EncodedPolyline\": bus.findtext('ns:EncodedPolyline', namespaces=ns),\n",
-    "            \"RouteUID\": bus.findtext('ns:RouteUID', namespaces=ns),\n",
-    "            \"RouteID\": bus.findtext('ns:RouteID', namespaces=ns),\n",
-    "            \"RouteName_Zh\": bus.find('ns:RouteName/ns:Zh_tw', ns).text if bus.find('ns:RouteName/ns:Zh_tw', ns) is not None else None,\n",
-    "            \"RouteName_En\": bus.find('ns:RouteName/ns:En', ns).text if bus.find('ns:RouteName/ns:En', ns) is not None else None,\n",
-    "            \"SubRouteUID\": bus.findtext('ns:SubRouteUID', namespaces=ns),\n",
-    "            \"SubRouteID\": bus.findtext('ns:SubRouteID', namespaces=ns),\n",
-    "            \"SubRouteName_Zh\": bus.find('ns:SubRouteName/ns:Zh_tw', ns).text if bus.find('ns:SubRouteName/ns:Zh_tw', ns) is not None else None,\n",
-    "            \"SubRouteName_En\": bus.find('ns:SubRouteName/ns:En', ns).text if bus.find('ns:SubRouteName/ns:En', ns) is not None else None,\n",
-    "            \"Direction\": bus.findtext('ns:Direction', namespaces=ns),\n",
-    "            \"UpdateTime\": bus.findtext('ns:UpdateTime', namespaces=ns),\n",
-    "            \"VersionID\": bus.findtext('ns:VersionID', namespaces=ns),\n",
-    "        }\n",
-    "        records.append(record)\n",
+    "#     # 每一個 <BusShape> 就是一筆資料\n",
+    "#     for bus in root.findall('ns:BusShape', ns):\n",
+    "#         record = {\n",
+    "#             \"Geometry\": bus.findtext('ns:Geometry', namespaces=ns),\n",
+    "#             \"EncodedPolyline\": bus.findtext('ns:EncodedPolyline', namespaces=ns),\n",
+    "#             \"RouteUID\": bus.findtext('ns:RouteUID', namespaces=ns),\n",
+    "#             \"RouteID\": bus.findtext('ns:RouteID', namespaces=ns),\n",
+    "#             \"RouteName_Zh\": bus.find('ns:RouteName/ns:Zh_tw', ns).text if bus.find('ns:RouteName/ns:Zh_tw', ns) is not None else None,\n",
+    "#             \"RouteName_En\": bus.find('ns:RouteName/ns:En', ns).text if bus.find('ns:RouteName/ns:En', ns) is not None else None,\n",
+    "#             \"SubRouteUID\": bus.findtext('ns:SubRouteUID', namespaces=ns),\n",
+    "#             \"SubRouteID\": bus.findtext('ns:SubRouteID', namespaces=ns),\n",
+    "#             \"SubRouteName_Zh\": bus.find('ns:SubRouteName/ns:Zh_tw', ns).text if bus.find('ns:SubRouteName/ns:Zh_tw', ns) is not None else None,\n",
+    "#             \"SubRouteName_En\": bus.find('ns:SubRouteName/ns:En', ns).text if bus.find('ns:SubRouteName/ns:En', ns) is not None else None,\n",
+    "#             \"Direction\": bus.findtext('ns:Direction', namespaces=ns),\n",
+    "#             \"UpdateTime\": bus.findtext('ns:UpdateTime', namespaces=ns),\n",
+    "#             \"VersionID\": bus.findtext('ns:VersionID', namespaces=ns),\n",
+    "#         }\n",
+    "#         records.append(record)\n",
     "\n",
-    "    # 轉成 DataFrame\n",
-    "    df = pd.DataFrame(records)\n",
+    "#     # 轉成 DataFrame\n",
+    "#     df = pd.DataFrame(records)\n",
     "\n",
-    "    return df\n",
+    "#     return df\n",
     "\n",
     "# 02 檢查路線\n",
     "def compare_column_values(df_a, df_b, column, name_a='df_a', name_b='df_b'):\n",
