--- a/01_TDX資料下載.ipynb
+++ b/01_TDX資料下載.ipynb
@@ -174,77 +174,25 @@
     "        output_folder = output_folder,\n",
     "        output_file_name = output_file_name\n",
     "        )\n",
-    "\n",
-    "displayofstopsequnece_folder = create_folder(os.path.join(os.getcwd(), '..', \"00_TDX資料下載\", \"04顯示用公車路線站序\"))\n",
-    "\n",
-    "\n",
-    "for city, city_en in selectcity.items():\n",
-    "    url = f\"https://tdx.transportdata.tw/api/basic/v2/Bus/StopOfRoute/City/{city_en}?%24format=XML\"\n",
-    "    output_folder = displayofstopsequnece_folder\n",
-    "    output_file_name = f\"顯示用公車路線站序_{city}_{downloaddate}.xml\"\n",
-    "    tdx_data_download(\n",
-    "        app_id = app_id,\n",
-    "        app_key = app_key,\n",
-    "        url = url,\n",
-    "        output_folder = output_folder,\n",
-    "        output_file_name = output_file_name\n",
-    "        )\n",
-    "    \n",
     "    time.sleep(60)\n",
     "\n",
-    "    time.sleep(60)\n",
-    "# if __name__ == \"__main__\":\n",
-    "#     main()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "df98573e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "app_id, app_key = get_app_credentials(r\"D:\\常用Tool\\tdx帳密.txt\") # 讀取TDX帳密 也可以自己手key in\n",
-    "busstopseq_folder = create_folder(os.path.join(os.getcwd(), '..', \"00_TDX資料下載\", \"01公車站序資料\"))\n",
-    "busroute_folder = create_folder(os.path.join(os.getcwd(), '..', \"00_TDX資料下載\", \"02公車路線資料\"))\n",
-    "businfo_folder = create_folder(os.path.join(os.getcwd(), '..', \"00_TDX資料下載\", \"03公車路線營運資料\"))\n",
+    "    for city, city_en in selectcity.items():\n",
+    "        url = f\"https://tdx.transportdata.tw/api/basic/v2/Bus/StopOfRoute/City/{city_en}?%24format=XML\"\n",
+    "        output_folder = displayofstopsequnece_folder\n",
+    "        output_file_name = f\"顯示用公車路線站序_{city}_{downloaddate}.xml\"\n",
+    "        tdx_data_download(\n",
+    "            app_id = app_id,\n",
+    "            app_key = app_key,\n",
+    "            url = url,\n",
+    "            output_folder = output_folder,\n",
+    "            output_file_name = output_file_name\n",
+    "            )\n",
+    "        \n",
+    "        time.sleep(60)\n",
     "\n",
-    "selectcity = {'新北市':'NewTaipei', '臺北市':'Taipei', '基隆市':'Keelung', '桃園市':'Taoyuan'}\n",
-    "downloaddate = datetime.today().strftime(\"%Y-%m-%d\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ef152b3e",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "資料已下載並存儲到 d:\\B-Project\\2025\\6800\\Technical\\12票證資料\\TicketAnalysis\\00_TDX資料下載\\04顯示用公車路線站序\\顯示用公車路線站序_新北市_2025-12-18.xml 中。\n",
-      "資料已下載並存儲到 d:\\B-Project\\2025\\6800\\Technical\\12票證資料\\TicketAnalysis\\00_TDX資料下載\\04顯示用公車路線站序\\顯示用公車路線站序_臺北市_2025-12-18.xml 中。\n"
-     ]
-    }
-   ],
-   "source": [
-    "displayofstopsequnece_folder = create_folder(os.path.join(os.getcwd(), '..', \"00_TDX資料下載\", \"04顯示用公車路線站序\"))\n",
-    "\n",
-    "\n",
-    "for city, city_en in selectcity.items():\n",
-    "    url = f\"https://tdx.transportdata.tw/api/basic/v2/Bus/StopOfRoute/City/{city_en}?%24format=XML\"\n",
-    "    output_folder = displayofstopsequnece_folder\n",
-    "    output_file_name = f\"顯示用公車路線站序_{city}_{downloaddate}.xml\"\n",
-    "    tdx_data_download(\n",
-    "        app_id = app_id,\n",
-    "        app_key = app_key,\n",
-    "        url = url,\n",
-    "        output_folder = output_folder,\n",
-    "        output_file_name = output_file_name\n",
-    "        )\n",
     "    \n",
-    "    time.sleep(60)"
+    "if __name__ == \"__main__\":\n",
+    "    main()"
    ]
   }
  ],
